spark-connect/deployment/jupyter-sparglim-on-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparglim-app
  namespace: sparglim
  labels:
    app: sparglim
spec:
  replicas: 1

  selector:
    matchLabels:
      app: sparglim-app
  template:
    metadata:
      labels:
        app: sparglim-app
    spec:
      containers:
        - name: sparglim-app
          image: tiendat2807/jupyterlab-sparglim
          ports:
            - containerPort: 8888
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "16Gi"
              cpu: "8000m"
