spark-connect/deployment/jupyter-sparglim-on-k8s/lab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparglim-lab-service
  namespace: sparglim
spec:
  ports:
    - name: lab
      protocol: TCP
      port: 8888
      #nodePort: 30888
      targetPort: 8888
    # if already deployed sparglim-server, you can comment out this port
    # - name: spark-ui
    #   protocol: TCP
    #   port: 4040
    #   nodePort: 30040
    #   targetPort: 4040
  selector:
    app: sparglim-app
  type: ClusterIP #NodePort
