spark-connect/deployment/jupyter-sparglim-on-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparglim-lab-ingress
  namespace: sparglim
spec:
  ingressClassName: nginx
  rules:
  - host: spark-jupyter.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sparglim-lab-service
            port:
              number: 8888
